--- a/res/values/cypher_strings.xml
+++ b/res/values/cypher_strings.xml
@@ -170,4 +170,21 @@
    <string name="usb_data_auto_unlock_title">Unlock USB data</string>
    <string name="usb_data_auto_unlock_summary">Allow unlocked data access to your phone\'s storage through USB (MTP, PTP)</string>
    <string name="usb_data_auto_unlock_warning_summary">Your device will establish unprotected connections, everytime you connect it to a PC. Secured lockscreens disable this option automatically.\n\nThis is still an experimental feature, use with caution.</string>
+
+   <!-- Volume Steps -->
+   <string name="volume_steps_title">Volume steps</string>
+   <string name="volume_steps_alarm_title">Volume steps: Alarm</string>
+   <string name="volume_steps_dtmf_title">Volume steps: DTMF</string>
+   <string name="volume_steps_music_title">Volume steps: Music</string>
+   <string name="volume_steps_notification_title">Volume steps: Notification</string>
+   <string name="volume_steps_ring_title">Volume steps: Ringer</string>
+   <string name="volume_steps_system_title">Volume steps: System</string>
+   <string name="volume_steps_voice_call_title">Volume steps: Voice Call</string>
+   <string name="volume_steps_reset">Reset</string>
+   <string name="volume_steps_60">60</string>
+   <string name="volume_steps_45">45</string>
+   <string name="volume_steps_30">30</string>
+   <string name="volume_steps_15">15</string>
+   <string name="volume_steps_7">7</string>
+   <string name="volume_steps_5">5</string>
 </resources>
