Bringup expanded desktop and implement per-user configuration
Change-Id: I351483f685fd5bf5a9a54db56521bd56aa896f61
Signed-off-by: Chris<sirhc95@cypheros.co>

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -49,6 +49,11 @@
                 android:title="@string/doze_title"
                 android:summary="@string/doze_summary" />
 
+        <Preference
+            android:key="expanded_desktop"
+            android:fragment="com.android.settings.cypher.fragments.ExpandedDesktop"
+            android:title="@string/expanded_desktop_category" />
+
         <!-- Hide night mode for now
         <ListPreference
             android:key="night_mode"
