--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -44,10 +44,11 @@
                 settings:keywords="@string/keywords_display_auto_brightness"
                 android:summary="@string/auto_brightness_summary" />
 				
-		<SwitchPreference
-                android:key="doze"
+		<PreferenceScreen
+                android:key="doze_fragment"
                 android:title="@string/doze_title"
-                android:summary="@string/doze_summary" />
+                android:summary="@string/doze_summary"
+				android:fragment="com.android.settings.cypher.fragments.AmbientSettings" />
 
         <Preference
             android:key="expanded_desktop"
