--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -16,6 +16,21 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         android:title="@string/about_settings">
+		
+		<!-- System update settings - launches activity -->
+        <PreferenceScreen android:key="system_update_settings"
+                android:title="@string/system_update_settings_list_item_title"
+                android:summary="@string/system_update_settings_list_item_summary">
+            <intent android:action="android.settings.SYSTEM_UPDATE_SETTINGS" />
+        </PreferenceScreen>
+
+
+        <PreferenceScreen android:key="additional_system_update_settings"
+                        android:title="@string/additional_system_update_settings_list_item_title">
+            <intent android:action="android.intent.action.MAIN"
+                    android:targetPackage="@string/additional_system_update"
+                    android:targetClass="@string/additional_system_update_menu" />
+        </PreferenceScreen>
 
         <!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
@@ -87,11 +102,11 @@
                 android:summary="@string/device_info_default"/>
 		
         <!-- Nexus version -->
-        <Preference android:key="nexus_version"
+        <Preference android:key="cypher_version"
                 android:enabled="false"
                 android:shouldDisableView="false"
-                android:title="@string/nexus_version"
-                android:summary="@string/nexus_version_default" />
+                android:title="@string/cypher_version"
+                android:summary="@string/cypher_version_default" />
 
         <!-- Vendor Version -->
         <Preference android:key="vendor_version"
