--- a/res/values-it/cypher_strings.xml
+++ b/res/values-it/cypher_strings.xml
@@ -1,31 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-   Copyright 2016 CypherOS
-   Licensed under the Apache License, Version 2.0 (the "License");
-   you may not use this file except in compliance with the License.
-   You may obtain a copy of the License at
-       http://www.apache.org/licenses/LICENSE-2.0
-   Unless required by applicable law or agreed to in writing, software
-   distributed under the License is distributed on an "AS IS" BASIS,
-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-   See the License for the specific language governing permissions and
-   limitations under the License.
+<!-- Copyright (C) 2016 The Pure Nexus Project
+
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+     
+          http://www.apache.org/licenses/LICENSE-2.0
+          
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+<!-- Development Settings -->
+    <!-- ADB debugging notifications -->
+    <string name="enable_adb_custom">Android debugging</string>
+    <string name="enable_adb_summary_custom">Abilita l\'interfaccia di Android Debug Bridge (adb)</string>
+    <string name="adb_notify">Notifica ADB</string>
+    <string name="adb_notify_summary">Visualizza una notifica quando è abilitato il debug di rete o USB</string>
+    <string name="adb_over_network">ADB sulla rete</string>
+    <string name="adb_over_network_summary">Abilita il TCP/IP debug tramite l\'interfaccia di rete (Wi\u2011Fi, reti USB). Questa impostazione viene reimpostata al riavvio</string>
+    <string name="adb_over_network_warning">AVVISO: Quando è attivato ADB sulla rete, il telefono è aperto e può intrusioni su tutte le reti connesse!\n\nUtilizzare questa funzionalità solo quando si è connessi su reti che si conosce.\n\nVuoi davvero attivare questa funzione?</string>
+    <!-- Local (desktop) backup password menu title [CHAR LIMIT=25] -->
+    <string name="local_backup_password_title">Password di backup desktop</string>
+    
+ <!-- Device Info Settings -->
+    <!-- Nexus version -->
     <string name="cypher_version">Versione CypherOS</string>
     <string name="cypher_version_default">Sconosciuto</string>
+	<!-- CypherOS API level -->
 	<string name="cypher_api_level">API</string>
-	<string name="cypher_api_level_flavor">Debug</string>
-	<string name="build_date">Data costruzione</string>
+  	<string name="cypher_api_level_flavor">Debug</string>
+     <!-- Vendor version -->
+    <string name="vendor_version">Versione fornitore</string>
+    <string name="vendor_version_default">Sconosciuto</string>
+    !-- Build date -->
+    <string name="build_date">Data costruzione</string>
     <string name="build_date_default">2014-01-01-0000</string>
     <!-- Model Name -->
     <string name="model_name">Nome modello</string>
 	<!-- Phone info shortcut -->
     <string name="device_info_title">Informazioni telefono</string>
-	<!-- Vendor version -->
-    <string name="vendor_version">Versione fornitore</string>
-    <string name="vendor_version_default">Sconosciuto</string>
-    
     <!-- Snackbar action button -->
     <string name="dev_settings_action_button">Impostazioni</string>
+    
+<!-- Sound & Notification Settings -->
+    <!-- Volume settings - Volume adjustment sound -->
+    <string name="volume_adjust_sounds_title">Suoni di regolazione volume</string>
 </resources>
