--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -25,12 +25,12 @@
         </PreferenceScreen>
 
 
-        <PreferenceScreen android:key="additional_system_update_settings"
+        <!--<PreferenceScreen android:key="additional_system_update_settings"
                         android:title="@string/additional_system_update_settings_list_item_title">
             <intent android:action="android.intent.action.MAIN"
                     android:targetPackage="@string/additional_system_update"
                     android:targetClass="@string/additional_system_update_menu" />
-        </PreferenceScreen>
+        </PreferenceScreen>-->
 
         <!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
