--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -130,5 +130,8 @@
     <color name="importance_secondary_slider_color">#858383</color>
 
     <color name="usage_graph_dots">#B0BEC5</color>
+	
+	<!-- Color used by notification log view -->
+    <color name="theme_primary_dark">#21272b</color>
 
 </resources>
