Settings: notify the user of the CypherOS version instead[1/2]
This basically replaces the version summary on the dashboard. We know
were on nougat, so it's more informal to notify users what version of
CypherOS they're on right from the dashboard

--- a/res/values/cypher_strings.xml
+++ b/res/values/cypher_strings.xml
@@ -30,6 +30,7 @@
     <!-- Nexus version -->
     <string name="cypher_version">CypherOS version</string>
     <string name="cypher_version_default">Unknown</string>
+	<string name="cypher_version_summary">CypherOS <xliff:g id="version" example="3.0">%1$s</xliff:g></string>
 	<!-- CypherOS API level -->
 	<string name="cypher_api_level">API</string>
   	<string name="cypher_api_level_flavor">Debug</string>
