--- a/res/xml/gesture_settings.xml
+++ b/res/xml/gesture_settings.xml
@@ -16,8 +16,7 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-        android:title="@string/gesture_settings_title"
-        settings:keywords="@string/keywords_gestures">
+        android:title="@string/gesture_settings_title">
 		
 		<SwitchPreference
                 android:key="camera_double_tap_power_gesture"
