Disable/Enable screenshot sound [2/2]
Cherry-picked from bf438aa

--- a/res/values/cypher_strings.xml
+++ b/res/values/cypher_strings.xml
@@ -55,4 +55,8 @@
 <!-- Sound & Notification Settings -->
     <!-- Volume settings - Volume adjustment sound -->
     <string name="volume_adjust_sounds_title">Volume adjustment sounds</string>
+<!-- Other sound settings -->
+	<!-- Screenshot sound -->
+    <string name="screenshot_sound_title">Screenshot sound</string>
+    <string name="screenshot_sound_summary">Plays sound effect when screenshot is taken</string>
 </resources>
