--- a/res/xml/other_sound_settings.xml
+++ b/res/xml/other_sound_settings.xml
@@ -23,6 +23,11 @@
     <SwitchPreference
             android:key="dial_pad_tones"
             android:title="@string/dial_pad_tones_title" />
+			
+	<com.android.settings.preference.SystemSettingSwitchPreference
+            android:key="screenshot_sound"
+            android:title="@string/screenshot_sound_title"
+            android:defaultValue="true" />
 
     <!-- Screen locking sounds -->
     <SwitchPreference
