--- a/res/values/cypher_strings.xml
+++ b/res/values/cypher_strings.xml
@@ -45,6 +45,10 @@
     <!-- Phone info shortcut -->
     <string name="device_info_title">Phone info</string>
 	
+<!-- Addition settings -->
+    <!-- Additions base -->
+	<string name="addition_settings_title">Additions</string>
+	<!-- TODO: Summary loaders -->
 <!-- Gesture Settings -->
     <!-- Gestures base -->
 	<string name="gesture_settings_title">Gestures</string>
