--- a/res/values-it/cypher_strings.xml
+++ b/res/values-it/cypher_strings.xml
@@ -34,7 +34,7 @@
 	<string name="cypher_version_summary">CypherOS <xliff:g id="version" example="3.0">%1$s</xliff:g></string>
 	<string name="cypher_api_level">API</string>
   	<string name="cypher_api_level_flavor">Debug</string>
-     <!-- Vendor version -->
+    <!-- Vendor version -->
     <string name="vendor_version">Versione fornitore</string>
     <string name="vendor_version_default">Sconosciuto</string>
     <!-- Build date -->
@@ -45,6 +45,10 @@
 	<!-- Phone info shortcut -->
     <string name="device_info_title">Informazioni telefono</string>
    
+<!-- Addition settings -->
+    <!-- Additions base -->
+	<string name="addition_settings_title">Aggiunte</string>
+	<!-- TODO: Summary loaders -->
 <!-- Gesture Settings -->
     <!-- Gestures base -->
 	<string name="gesture_settings_title">Gesti</string>
