--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -36,6 +36,11 @@
                     android:targetPackage="@string/additional_system_update"
                     android:targetClass="@string/additional_system_update_menu" />
         </PreferenceScreen>-->
+		
+		<!-- Software information -->
+        <PreferenceScreen android:key="software_info"
+                android:title="@string/software_info_settings_title"
+                android:fragment="com.android.settings.cypher.deviceinfo.SoftwareInfo />
 
         <!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
