--- a/res/values/cypher_strings.xml
+++ b/res/values/cypher_strings.xml
@@ -44,8 +44,13 @@
     <string name="model_name">Model name</string>
     <!-- Phone info shortcut -->
     <string name="device_info_title">Phone info</string>
-	<!-- Software information-->
+<!-- Software information-->
+    <!-- Software information base -->
 	<string name="software_info_settings_title">Software information</string>
+	<!-- Build notes -->
+	<string name="buildnotes_settings_title">Build notes</string>
+	<string name="buildnotes_settings_title_summary">Check out the latest changes in CypherOS to know what\'s the what on your current release</string>
+	<string name="buildnotes_settings_error">Unable to load buildnotes</string>
 	
 <!-- Addition settings -->
     <!-- Additions base -->
