Settings: Foward port statusbar settings and customization[1/2]
The first set of features are back for aoscp! This commit reintroduces
the classic statusbar settings with clock and date customizations to top
it off.

- Add back statusbar settings
- Make statusbar settings searchable
- Statusbar clock positions
- Statusbar AM/PM customizations
- Statusbar date visibility
- Statubar date position
- Statusbar date format
- New statusbar icon
- Modfiied some strings to fit our standards

This commit was referenced from:
AOSIP/platform_packages_apps_Settings@ec9b0bc

--- a/res/xml/addition_settings.xml
+++ b/res/xml/addition_settings.xml
@@ -18,5 +18,12 @@
                   xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
         android:title="@string/addition_settings_title">
 		
+		<!-- Statusbar settings -->
+		<PreferenceScreen
+                android:key="statusbar_settings"
+                android:title="@string/statusbar_settings_title"
+				android:summary="@string/statusbar_settings_title_summary"
+                android:fragment="com.android.settings.cypher.fragments.StatusbarSettings"
+                android:icon="@drawable/ic_settings_statusbar" />
 
 </PreferenceScreen>
