Settings: Configurable 0, 90, 180 and 270 degree rotation (2/2)
Port to Nougat

Original commit: AOSIP/platform_packages_apps_Settings@8762e31

Change-Id: I48e81ff5b3f89e2b7531a19e42b491182cbf95b4

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -85,6 +85,11 @@
                 android:key="auto_rotate"
                 android:summary="%s"
                 android:title="@string/display_auto_rotate_title" />
+				
+		<PreferenceScreen
+                android:key="display_rotation"
+                android:fragment="com.android.settings.cypher.fragments.DisplayRotation"
+                android:title="@string/display_rotation_title" />
 
         <PreferenceScreen
                 android:key="wifi_display"
