--- a/res/xml/other_sound_settings.xml
+++ b/res/xml/other_sound_settings.xml
@@ -70,5 +70,24 @@
             android:key="emergency_tone"
             android:title="@string/emergency_tone_title"
             android:summary="%s" />
+			
+	<SwitchPreference
+        android:key="safe_headset_volume"
+        android:title="@string/safe_headset_volume_title"
+        android:summary="@string/safe_headset_volume_summary"
+        android:persistent="false"
+        android:defaultValue="true" />
 
+	<PreferenceCategory android:key="notifications_category"
+	    android:title="@string/notifications_category_title">
+		
+		<ListPreference
+            android:key="less_notification_sounds"
+            android:title="@string/less_notification_sounds_title"
+            android:summary="@string/less_notification_sounds_summary"
+            android:entries="@array/less_notification_sounds_entries"
+            android:entryValues="@array/less_notification_sounds_values"
+            android:persistent="false" />
+			
+	</PreferenceCategory>
 </PreferenceScreen>
