--- a/res/xml/other_sound_settings.xml
+++ b/res/xml/other_sound_settings.xml
@@ -77,6 +77,13 @@
         android:summary="@string/safe_headset_volume_summary"
         android:persistent="false"
         android:defaultValue="true" />
+		
+	<SwitchPreference
+        android:key="volume_keys_control_media_stream"
+        android:title="@string/volume_keys_control_media_stream"
+        android:summary="@string/volume_keys_control_media_stream_summary"
+        android:defaultValue="false"
+        android:persistent="false" />
 
 	<PreferenceCategory android:key="notifications_category"
 	    android:title="@string/notifications_category_title">
