--- a/res/values-it/cypher_strings.xml
+++ b/res/values-it/cypher_strings.xml
@@ -4,9 +4,9 @@
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-     
+
           http://www.apache.org/licenses/LICENSE-2.0
-          
+
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -25,11 +25,12 @@
     <string name="adb_over_network_warning">AVVISO: Quando è attivato ADB sulla rete, il telefono è aperto e può intrusioni su tutte le reti connesse!\n\nUtilizzare questa funzionalità solo quando si è connessi su reti che si conosce.\n\nVuoi davvero attivare questa funzione?</string>
     <!-- Local (desktop) backup password menu title [CHAR LIMIT=25] -->
     <string name="local_backup_password_title">Password di backup desktop</string>
-    
+
  <!-- Device Info Settings -->
     <!-- Nexus version -->
     <string name="cypher_version">Versione CypherOS</string>
     <string name="cypher_version_default">Sconosciuto</string>
+
 	<!-- CypherOS API level -->
 	<string name="cypher_version_summary">CypherOS <xliff:g id="version" example="3.0">%1$s</xliff:g></string>
 	<string name="cypher_api_level">API</string>
@@ -38,7 +39,7 @@
     <string name="vendor_version">Versione fornitore</string>
     <string name="vendor_version_default">Sconosciuto</string>
     <!-- Build date -->
-    <string name="build_date">Data costruzione</string>
+    <string name="build_date">Data di costruzione</string>
     <string name="build_date_default">2014-01-01-0000</string>
     <!-- Model Name -->
     <string name="model_name">Nome modello</string>
@@ -51,6 +52,12 @@
 	<string name="buildnotes_settings_title">Note di costruzione</string>
 	<string name="buildnotes_settings_title_summary">Scopri le ultime modifiche di CypherOS e sapere che cosa c\'è di nuovo sul vostro ultimo rilascio</string>
 	<string name="buildnotes_settings_error">Impossibile caricare le note di costruzione</string>
+<!-- Social category -->
+	<string name="social_category_title">Sociale</string>
+	<string name="website_preference_title">In rete</string>
+	<string name="website_preference_title_summary">Dai un\'occhiata al nostro sito web per le ultime informazioni di compilazione e aggiornamenti</string>
+	<string name="google_preference_title">CypherPlus</string>
+	<string name="google_preference_title_summary">Resta in contatto con gli utenti e gli sviluppatori di CypherOS sulla comunità di Google Plus</string>
 	
 <!-- Addition settings -->
     <!-- Additions base -->
@@ -62,7 +69,7 @@
 	<!-- Double-snap summary loaders -->
 	<string name="camera_double_tap_power_gesture_on">Doppio scatto è attualmente attivo</string>
 	<string name="camera_double_tap_power_gesture_off">Doppio scatto è attualmente inattivo</string>
-    
+
 <!-- Sound & Notification Settings -->
     <!-- Volume settings - Volume adjustment sound -->
     <string name="volume_adjust_sounds_title">Suoni di regolazione volume</string>
@@ -70,4 +77,75 @@
     <!-- Screenshot sound -->
     <string name="screenshot_sound_title">Suono Screenshot</string>
     <string name="screenshot_sound_summary">Riproduce un effetto sonoro quando si scatta uno screenshot</string>
+
+<!-- Statusbar Settings -->
+    <!-- Statusbar base -->
+	<string name="statusbar_settings_title">Barra di stato</string>
+	<string name="statusbar_settings_title_summary">Cambia l\'aspetto grafico della vostra barra di stato con una serie di personalizzazioni</string>
+    
+    <!-- Status bar - Clock -->
+    <string name="status_bar_clock_title">Orologio &amp; data</string>
+    <string name="status_bar_clock_style_title">Posizione</string>
+    <string name="status_bar_clock_style_right">Destra</string>
+    <string name="status_bar_clock_style_left">Sinistra</string>
+    <string name="status_bar_clock_style_center">Centrata</string>
+    <string name="status_bar_clock_style_hidden">Nascosta</string>
+    <string name="status_bar_am_pm_title">AM/PM</string>
+    <string name="status_bar_am_pm_info">Orologio 24 ore è abilitato</string>
+    <string name="status_bar_am_pm_normal">Normale</string>
+    <string name="status_bar_am_pm_small">Piccola</string>
+    <string name="status_bar_am_pm_hidden">Nascosta</string>
+	
+    <!-- Statusbar - Date -->
+    <string name="clock_date_display">Data</string>
+    <string name="clock_date_display_summary">Mostra la data personalizzata prima dell\'orologio</string>
+    <string name="clock_date_display_none">Nascondi</string>
+    <string name="clock_date_display_small">Dimensione caratteri piccoli</string>
+    <string name="clock_date_display_normal">Dimensione caratteri normali</string>
+    <string name="clock_date_style">Stile data</string>
+    <string name="clock_date_style_normal">Normale</string>
+    <string name="clock_date_style_lowercase">Minuscola</string>
+    <string name="clock_date_style_uppercase">Maiuscola</string>
+    <string name="clock_date_format_custom">Formato Java personalizzato</string>
+    <string name="clock_date_format">Formato data</string>
+    <string name="clock_date_string_edittext_title">Deve essere in formato data ad esempio, mm/dd/yy</string>
+    <string name="clock_date_string_edittext_summary">Inserire una stringa</string>
+	
+    <!-- Display : Rotation -->
+    <string name="display_rotation_title">Rotazione</string>
+    <string name="display_rotation_disabled">Disabilitata</string>
+    <string name="display_rotation_unit">Gradi</string>
+    <string name="display_rotation_category_title">Modalità di rotazione</string>
+    <string name="display_rotation_0_title">0 gradi</string>
+    <string name="display_rotation_90_title">90 gradi</string>
+    <string name="display_rotation_180_title">180 gradi</string>
+    <string name="display_rotation_270_title">270 gradi</string>
+	
+    <!-- Safe headset volume restore checkbox -->
+    <string name="safe_headset_volume_title">Volume cuffie sicuro</string>
+    <string name="safe_headset_volume_summary">Previene un livello alto del volume quando gli auricolari vengono inseriti</string>
+    <string name="safe_headset_volume_warning_dialog_text">L\'ascolto ad alto volume per lunghi periodi può danneggiare l\'udito. Disabilitalo con cautela.</string>
+	<string name="safe_headset_attention">Attenzione</string>
+	<string name="dlg_ok">Ok</string>
+	<string name="dlg_cancel">Annulla</string>
+	
+    <!-- Less Notification sounds -->
+    <string name="notifications_category_title">Notifiche</string>
+    <string name="less_notification_sounds_title">Suoni di notifica meno frequenti</string>
+    <string name="less_notification_sounds_summary">Limita i suoni di notifica di ogni app in modo che si attivino solo una volta per ogni periodo di tempo impostato</string>
+    <string name="less_notification_sounds_default">Comportamento predefinito</string>
+    <string name="less_notification_sounds_3s">3 secondi</string>
+    <string name="less_notification_sounds_5s">5 secondi</string>
+    <string name="less_notification_sounds_10s">10 secondi</string>
+    <string name="less_notification_sounds_15s">15 secondi</string>
+    <string name="less_notification_sounds_30s">30 secondi</string>
+    <string name="less_notification_sounds_45s">45 secondi</string>
+    <string name="less_notification_sounds_1m">1 minuto</string>
+    <string name="less_notification_sounds_2m">2 minuti</string>
+    <string name="less_notification_sounds_5m">5 minuti</string>
+	
+    <!-- Volume Keys Media Control -->
+    <string name="volume_keys_control_media_stream">Controllo multimediale</string>
+    <string name="volume_keys_control_media_stream_summary">I tasti del volume controllano il volume multimediale piuttosto che le notifiche</string>
+
 </resources>
