--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -18,6 +18,12 @@
                   xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
         android:title="@string/statusbar_settings_title">
 		
+		<com.android.settings.preference.SystemSettingSwitchPreference
+            android:key="status_bar_quick_qs_pulldown"
+            android:title="@string/status_bar_quick_qs_pulldown_title"
+            android:summary="@string/status_bar_quick_qs_pulldown_summary"
+            android:defaultValue="true" />
+		
     <PreferenceCategory
         android:title="@string/status_bar_clock_title">
 
