Gestures: Implement launch gestures[1/2]
A fork of Gesture Anywhere, custom configuration and extra features are
coming soon

Signed-off-by: Chris <sirhc95@cypheros.co>

--- a/res/values/cypher_dimens.xml
+++ b/res/values/cypher_dimens.xml
@@ -141,4 +141,9 @@
 
     <!-- Text size of the color picker help screen summary text -->
     <dimen name="color_picker_help_screen_summary_text_size">12sp</dimen>
+
+    <!-- Gesture Anywhere -->
+    <dimen name="ga_gesture_thumbnail_inset">8dip</dimen>
+    <dimen name="ga_gesture_thumbnail_size">64dip</dimen>
+
 </resources>
