--- a/res/values/cypher_arrays.xml
+++ b/res/values/cypher_arrays.xml
@@ -203,5 +203,16 @@
         <item>@color/yellow</item>>
         <item>@color/orange</item>
     </array>
+	
+	<!-- Gesture Anywhere -->
+    <string-array name="launch_gestures_position_entries" translatable="false">
+        <item>@string/launch_gestures_position_left</item>
+        <item>@string/launch_gestures_position_right</item>
+    </string-array>
+
+    <string-array name="launch_gestures_position_values" translatable="false">
+        <item>3</item>
+        <item>5</item>
+    </string-array>
 
 </resources>
