--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -97,7 +97,7 @@
                 android:title="@string/fcc_equipment_id"
                 android:summary="@string/device_info_default"/>
 		
-        <!-- Nexus version -->
+        <!-- CypherOS version -->
         <Preference android:key="cypher_version"
                 android:enabled="false"
                 android:shouldDisableView="false"
@@ -119,7 +119,7 @@
                 android:summary="@string/vendor_version_default" />
 
         <!-- Detailed build version -->
-        <Preference android:key="cypher_build"
+        <Preference android:key="cypher_build_number"
                 android:enabled="false"
                 android:shouldDisableView="false"
                 android:title="@string/build_number"
