--- a/res/values-it/cypher_strings.xml
+++ b/res/values-it/cypher_strings.xml
@@ -77,7 +77,6 @@
     <string name="screenshot_sound_title">Suono Screenshot</string>
     <string name="screenshot_sound_summary">Riproduce un effetto sonoro quando si scatta uno screenshot</string>
 
-
 <!-- Statusbar Settings -->
     <!-- Statusbar base -->
     <string name="statusbar_settings_title">Barra di stato</string>
@@ -235,4 +234,79 @@
     <string name="color_picker_help_palette_summary">Tutti i colori delle palette hanno un valore fisso. \nUn click imposta il colore preferito come nuovo colore, senza applicare il nuovo colore.</string>
     <string name="color_picker_help_do_not_show_title">Non mostrare più</string>
     <string name="color_picker_help_button_ok_title">OK</string>
+    
+    <!-- Gesture Anywhere -->
+   <string name="screen_gestures_category_title">Schermo</string>
+   <string name="launch_gestures_title">Gesti ovunque</string>
+   <string name="launch_gestures_title_summary">Avvia le applicazioni con i gesti delle dita personalizzati ovunque in tutto il sistema</string>
+   <string name="launch_gestures_enabled_title">Abilita</string>
+   <string name="launch_gestures_enabled_summary">Abilita la funzione Gesti Ovunque</string>
+   <string name="launch_gestures_position_title">Posizione</string>
+   <string name="launch_gestures_position_left">Bordo sinistro</string>
+   <string name="launch_gestures_position_right">Bordo destro</string>
+   <string name="launch_gestures_gestures_title">Gesti</string>
+   <string name="launch_gestures_gestures_summary">Aggiungi, rimuovi e modifica i gesti</string>
+   <!-- Label, button used to add a gesture -->
+  <string name="ga_button_add">Aggiungi un gesto</string>
+  <!-- Label, button used to reload all gestures -->
+  <string name="ga_button_reload">Ricarica</string>
+  <!-- Label, button used to cancel the operation of adding a gesture -->
+  <string name="ga_button_discard">Scarta</string>
+  <!-- Label, button used to save a gesture newly created -->
+  <string name="ga_button_done">Fatto</string>
+  <!-- Label, prompt asking the user to enter the name of the gesture -->
+  <string name="ga_prompt_gesture_name">Nome</string>
+  <!-- Error message, informs the user he needs to enter a name before saving a gesture -->
+  <string name="ga_error_missing_name">Devi inserire un nome</string>
+  <!-- success message, tells the user where the gesture was saved -->
+  <string name="ga_save_success">Gesto salvato in %s</string>
+  <!-- Buttons in Rename gesture dialog box -->
+  <string name="ga_rename_action">Ok</string>
+  <!-- Buttons in Rename gesture dialog box -->
+  <string name="ga_cancel_action">Annulla</string>
+  <!-- Message displayed when the user opens the gestures settings screen -->
+  <string name="ga_gestures_loading">Caricamento gesti ...</string>
+  <!-- Message displayed when the user has no gestures -->
+  <string name="ga_gestures_empty">Non ci sono gesti</string>
+  <!-- Title of the screen used to view/manage gestures -->
+  <string name="ga_gestures_activity">Gesti</string>
+  <!-- Noun, menu item used to edit a gesture -->
+  <string name="ga_gestures_edit">Modifica</string>
+  <!-- Noun, menu item used to remove a gesture -->
+  <string name="ga_gestures_delete">Elimina</string>
+  <!-- Message displayed when a gesture is successfully deleted -->
+  <string name="ga_gestures_delete_success">Gesto eliminato</string>
+  <!-- Title of dialog box -->
+  <string name="ga_gestures_rename_title">Rinomina gesto</string>
+  <!-- Label of gesture name field in Rename gesture dialog box -->
+  <string name="ga_gestures_rename_label">Nome gesto</string>
+  <!-- Message, displayed when the sdcard cannot be found, 1st parameter is the name of the file that stores the gestures.  CHAR LIMIT=80 -->
+  <string name="ga_gestures_error_loading">Impossibile caricare %s. Assicurati di avere memoria disponibile.</string>
+  <string name="trigger_category">Area di attivazione</string>
+  <string name="trigger_width_title">Larghezza area attivazione</string>
+  <string name="trigger_width_summary">Regola la larghezza dell\'area di attivazione</string>
+  <string name="trigger_top_title">Posizione area attivazione</string>
+  <string name="trigger_top_summary">Regola la posizione verticale dell\'area di attivazione</string>
+  <string name="trigger_bottom_title">Altezza area attivazione</string>
+  <string name="trigger_bottom_summary">Regola l\'altezza dell\'area di attivazione</string>
+  <string name="picker_activities">Attività</string>
+  <string name="select_custom_app_title">Seleziona un\'app personalizzata</string>
+  <string name="select_custom_activity_title">Seleziona un\'attività personalizzata</string>
+  <string name="profile_applist_title">Applicazioni</string>
+  
+    <!-- PowerMenu Settings -->
+    <string name="power_menu_title">Menù accensione</string>
+    <!-- Power menu customization -->
+    <string name="power_menu_reboot_title">Riavvio</string>
+    <string name="power_menu_screenshot_title">Screenshot</string>
+    <string name="power_menu_screenrecord_title">Registra schermo</string>
+    <string name="power_menu_airplane_title">Modalità aereo</string>
+    <string name="power_menu_users_title">Cambia utente</string>
+    <string name="power_menu_search_title">Ricerca</string>
+    <string name="power_menu_voice_title">Ricerca vocale</string>
+    <string name="power_menu_settings_title">Impostazioni rapide</string>
+    <string name="power_menu_lockdown_title">Blocco dispositivo</string>
+    <string name="power_menu_bug_report_title">Segnalazione errore</string>
+    <string name="power_menu_sound_title">Pannello audio</string>
+    <string name="power_menu_bug_report_disabled">La segnalazione degli errori è disattivata nelle impostazioni di sviluppo</string>
  </resources>
