--- a/res/values/cypher_arrays.xml
+++ b/res/values/cypher_arrays.xml
@@ -217,6 +217,7 @@
 	
 	<!-- PowerMenu entries -->
     <string-array name="power_menu_actions_array" translatable="false">
+        <item>power</item>
         <item>reboot</item>
         <item>screenshot</item>
 		<item>screenrecord</item>
