--- a/res/values/cypher_dimens.xml
+++ b/res/values/cypher_dimens.xml
@@ -145,5 +145,7 @@
     <!-- Gesture Anywhere -->
     <dimen name="ga_gesture_thumbnail_inset">8dip</dimen>
     <dimen name="ga_gesture_thumbnail_size">64dip</dimen>
+	
+	<dimen name="shortcut_picker_left_padding">70.0dip</dimen>
 
 </resources>
