--- a/res/values/cypher_strings.xml
+++ b/res/values/cypher_strings.xml
@@ -293,4 +293,8 @@
     <string name="select_custom_app_title">Select custom app</string>
     <string name="select_custom_activity_title">Select custom activity</string>
     <string name="profile_applist_title">Applications</string>
+	
+	<!-- double tap to sleep - statusbar -->
+    <string name="double_tap_to_sleep_title">Tap to sleep</string>
+    <string name="double_tap_to_sleep_summary">Double tap on the status bar to put the device to sleep</string>
 </resources>
