--- a/res/values-it/cypher_strings.xml
+++ b/res/values-it/cypher_strings.xml
@@ -293,4 +293,8 @@
   <string name="select_custom_app_title">Seleziona un\'app personalizzata</string>
   <string name="select_custom_activity_title">Seleziona un\'attività personalizzata</string>
   <string name="profile_applist_title">Applicazioni</string>
+  
+   <!-- double tap to sleep - statusbar -->
+   <string name="double_tap_to_sleep_title">Doppio tocco per sospendere</string>
+   <string name="double_tap_to_sleep_summary">Doppio tocco sulla barra di stato per mettere il dispositivo a dormire</string>
 </resources>
