Settings: Network Traffic [2/2]
PureNexus edits:
*cleaned up seek_bar_preference for more of a material look
*updated to play nice with our colorpicker

Ported from:
PureNexusProject/android_packages_apps_PureNexusSettings@4bbe59b

--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -23,6 +23,11 @@
             android:title="@string/status_bar_quick_qs_pulldown_title"
             android:summary="@string/status_bar_quick_qs_pulldown_summary"
             android:defaultValue="true" />
+			
+		<Preference
+            android:key="nettraffrag" 
+            android:title="@string/network_traffic_title"
+            android:summary="@string/network_traffic_title_summary" />
 		
     <PreferenceCategory
         android:title="@string/status_bar_clock_title">
