--- a/res/values/cypher_attrs.xml
+++ b/res/values/cypher_attrs.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2015 Android Open Source Illusion Project
+<!-- Copyright (C) 2016 CypherOS
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -22,5 +22,12 @@
         <attr name="resetColor1Title" format="string" />
         <attr name="resetColor2Title" format="string" />
         <attr name="alphaSliderVisible" format="boolean" />
+    </declare-styleable>
+	
+	<declare-styleable name="SeekBarPreference">
+        <attr name="interval" format="integer" />
+        <attr name="minimum" format="integer" />
+        <attr name="unitsLeft" format="string|reference" />
+        <attr name="unitsRight" format="string|reference" />
     </declare-styleable>
 </resources>
