--- a/res/xml/network_traffic.xml
+++ b/res/xml/network_traffic.xml
@@ -34,6 +34,12 @@
         android:entries="@array/show_network_traffic_frequency_entries"
         android:entryValues="@array/show_network_traffic_frequency_values"
         android:persistent="false" />
+		
+    <SwitchPreference
+        android:key="network_traffic_hidearrow"
+        android:title="@string/network_traffic_hidearrow"
+        android:summary="@string/network_traffic_hidearrow_summary"
+        android:defaultValue="false" />
 
     <SwitchPreference
         android:key="network_traffic_autohide"
